# identicon

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  package.json  vercel.json
lib/: index.d.ts  index.js
native/: Cargo.toml
native/src/: lib.rs
server/: index.js
