[package]
name = "identicon"
version = "0.1.1"
authors = ["Ardy Febriansyah <ardyfeb02@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "identicon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
neon-serde = "0.4.0"
identicon-rs = "1.4.1"
serde = { version = "1.0", features = ["derive"] }